--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -24,7 +24,7 @@
     <nav class="header-side">
       <ul class="nav">
         <li class="nav-link">
-          <a href="https://cloud.gov/#about">About</a>
+          <a href="https://cloud.gov/overview">Overview</a>
         </li>
         <li class="nav-link usa-current">
           <a href="https://docs.cloud.gov/">Documentation</a>
