Small updates to URLs and tiny style things

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,13 +7,13 @@
               <a class="usa-footer-primary-link" href="https://docs.cloud.gov/help/">cloud.gov help</a>
             </li>
             <li class="usa-width-one-fourth usa-footer-primary-content">
-              <a class="usa-footer-primary-link" href="https://github.com/18F/cg-landing">Edit this page</a>
+              <a class="usa-footer-primary-link" href="https://github.com/18F/cg-site">Edit this page</a>
             </li>
             <li class="usa-width-one-fourth usa-footer-primary-content">
               <a class="usa-footer-primary-link" href="https://18f.gsa.gov/">Made by 18F</a>
             </li>
             <li class="usa-width-one-fourth usa-footer-primary-content">
-              <a class="usa-footer-primary-link" href="https://18f.gsa.gov/2015/10/09/cloud-gov-launch/">Announcement post</a>
+              <a class="usa-footer-primary-link" href="https://18f.gsa.gov/tags/cloud-gov/">Blog posts</a>
             </li>
           </ul>
         </nav>
