--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -24,9 +24,9 @@
     <nav class="header-side">
       <ul class="nav">
         <li class="nav-link">
-          <a href="https://cloud.gov/overview">Overview</a>
+          <a href="https://cloud.gov/overview/">Overview</a>
         </li>
-        <li class="nav-link usa-current">
+        <li class="nav-link">
           <a href="https://docs.cloud.gov/">Documentation</a>
         </li>
         <li class="nav-link">
