--- a/layouts/partials/overview-header.html
+++ b/layouts/partials/overview-header.html
@@ -44,7 +44,7 @@
         <nav role="navigation" class="header-side">
           <div class="usa-nav-inner">
             <div class="usa-nav-secondary">
-              <form class="usa-search js-search-form" accept-charset="UTF-8" action="http://search.usa.gov/search" id="search_form" method="get">
+              <form class="usa-search js-search-form" accept-charset="UTF-8" action="https://search.usa.gov/search" id="search_form" method="get">
                 <div role="search">
                   <label class="usa-sr-only" for="search-field-small">Search small</label>
                   <input id="affiliate" name="affiliate" type="hidden" value="cloud.gov" />
@@ -57,10 +57,10 @@
               </form>
               <ul class="nav">
                 <li class="nav-link">
-                  <a href="https://cloud.gov/overview">Overview</a>
+                  <a href="https://cloud.gov/overview/">Overview</a>
                 </li>
-                <li class="nav-link usa-current">
-                  <a href="/">Documentation</a>
+                <li class="nav-link">
+                  <a href="https://docs.cloud.gov/">Documentation</a>
                 </li> 
                 <li class="nav-link">
                   <a href="https://cloud.gov/updates/">Updates</a>
