--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,7 +10,7 @@
 
 
 <section class="section section-dark section-chevron_alt section-first"
-    id="main" tabindex="-1">
+    id="main">
   <div class="usa-grid section-bg-parent">
     <div class="usa-width-whole billboard  section-bg">
       <h1 class="billboard-display_text">The Government Innovation Platform</h1>
